--- a/test1.yaml
+++ b/test1.yaml
@@ -1,11 +1,10 @@
     ---
-    - hosts: webserver
-      remote_user: linx
+    - hosts: node
       become: yes
       become_method: sudo
       tasks:
         - name: Install pip
-          apt: name=python-pip state=present
+          yum: name=python-pip state=present
       
         - name: install docker-py
           pip: name=docker-py
