--- a/test1.yaml
+++ b/test1.yaml
@@ -4,7 +4,7 @@
       become_method: sudo
       tasks:
         - name: Install pip
-          yum: name=python-pip state=present
+          apt: name=python-pip state=present
       
         - name: install docker-py
           pip: name=docker-py
